# Crimsnap

./: .gitignore  CHANGELOG.md  HANDOFF.md  README.md  index.html  make-icon.ps1  overlay.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: GITHUB_RELEASE_CHECKLIST.md  INSTALL.md  PUBLISHING.md
scripts/: make-latest-json.ps1  release-tag.ps1  setup-github-secrets.ps1
src/: api.ts  main.ts  overlay.css  overlay.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  updater.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_io.rs  ffmpeg.rs  lib.rs  main.rs  model.rs  monitors.rs  overlay.rs  presets.rs  recorder.rs  settings.rs  windows_devices.rs
